k8s/topsquad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topsquad
  namespace: topsquad
  labels:
    app.kubernetes.io/name: topsquad
    app.kubernetes.io/instance: topsquad
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: topsquad
      app.kubernetes.io/instance: topsquad
  template:
    metadata:
      labels:
        app.kubernetes.io/name: topsquad
        app.kubernetes.io/instance: topsquad
    spec:
      containers:
        - name: topsquad
          image: hadensmith/topsquad:f6ef145acd3ce6ab7d407040d2e4eb872020ab4c
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
