k8s/topsquad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: topsquad-svc
  namespace: topsquad
spec:
  type: ClusterIP
  selector:
    app: topsquad
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
