k8s/topsquad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topsquad-ingress
  namespace: topsquad
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - top-squad.app
      secretName: topsquad-tls
  rules:
    - host: top-squad.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: topsquad-svc
                port:
                  number: 80
